assets/css/index.css
/* ... */
.body .menu__item span {
  color: rgba(255, 255, 255, 0.56);
  margin: 0 0 0 1rem;
}

.body .menu__item:hover .menu__icon,
.body .menu__item.active .menu__icon
{
  background-color: #5081FB;
}

.body .menu__item:hover .menu__icon i,
.body .menu__item.active .menu__icon i
{
  color: var(--white-neutral);
}

.body .menu__item:hover span,
.body .menu__item.active span {
  color: var(--white-neutral);
}

/* body center */
.body .code {
  box-sizing: border-box;
  width: var(--width-center);

  display: var(--elems-center-d-flex);
  flex-direction: column;
  align-items: var(--elems-center-justify-content);
}

.body .code__containerText {
  box-sizing: border-box;
  width: var(--elems-center-width);
  
  display: var(--elems-center-d-flex);
  /* justify-content: var(--elems-center-justify-content); */
  align-items: flex-start;
}

.body .code .code__border {
  width: 100%;
  border: 2rem solid #6BD1FF;
  border-radius: 8px;
  background: #141414;
  padding: 1rem;
  line-height: 1rem;

  box-sizing: border-box; /* to-do review*/
}

.body .code .code__circle:first-of-type {
  margin-left: 0;
}

.body .code .code__circle {
  display: inline-block;
  width: var(--circle-code-size);
  height: var(--circle-code-size);

  border-radius: calc(var(--circle-code-size) / 2);
  margin-left: 0.5rem;
}

.body .code .code__circle1 {
  background-color: #FF5F56;
}

.body .code .code__circle2 {
  background-color: #FFBD2E;
}

.body .code .code__circle3 {
  background-color: #27C93F;
}

.body .code .code__text {
  display: block;

  border: 0;
  box-sizing: border-box;

  background: #141414;
  box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.24);

  width: 100%;

  color: var(--white-neutral);
  line-height: 18px;
  min-height: 25vh;
  padding: 1.5rem 0 0 0;
  font-family: 'Roboto Mono', sans-serif;
  font-size: 14px;

  /* preserve white spaces and line breaks */
  white-space: pre-wrap;
  overflow-wrap: break-word; /* to-do review*/
  /* overflow-x: scroll; */ /* to-do review*/
}

.body .code__btnVisualize {
  box-sizing: border-box;
  margin-top: 2rem;
  width: var(--elems-center-width);
  height: 3.5rem;

  background: rgba(80, 129, 251, 0.08);
  border: none;
  border-radius: 8px;

  font: var(--font-body);
  color: var(--white-neutral);
}

.body .code__btnVisualize:hover {
  background: rgba(80, 129, 251, 0.16);
}

.body .code__btnVisualize:active {
  background: rgba(80, 129, 251, 0.16);
  border: 4px solid rgba(80, 129, 251, 0.24);
}

.body .code__btnVisualize:focus {
  background: rgba(80, 129, 251, 0.24);
}

/* body right side */
.body .edition {
  width: var(--width-right);

  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.body .edition > * {
  width: 100%;
  max-width: 250px;
  border: none;
  border-radius: 8px;
}

.body .edition > *::placeholder {
  color: var(--white-neutral);
  opacity: 0.64;
}

.body .edition__title {
  text-transform: uppercase;
  font-size: 0.75rem;
  line-height: 1.125rem;
  letter-spacing: 0.4em;
  color: var(--white-neutral);
}

.body .edition__projectName {
  background: rgba(255, 255, 255, 0.16);
  box-sizing: border-box;
  margin-top: 1rem;
  padding: 16px 14px;
  font: var(--font-body);

  color: var(--white-neutral);
}

.body .edition__projectName:hover {
  background: rgba(255, 255, 255, 0.24);
}

.body .edition__projectDescription {
  background: rgba(255, 255, 255, 0.16);
  box-sizing: border-box;
  margin: 1rem 0 40px 0;
  padding: 16px 14px;
  font: var(--font-body);

  color: var(--white-neutral);
}

.body .edition__projectDescription:hover {
  background: rgba(255, 255, 255, 0.24);
}

.body .edition__language {
  appearance: none; /* removes default chrome/firefox style */

  background: rgba(255, 255, 255, 0.16) url('../img/seta.svg') 90% 50% no-repeat;
  box-sizing: border-box;

  margin: 1rem 0 0 0;
  padding: 16px 14px;

  color: var(--white-neutral);
  opacity: 0.64;

  font: var(--font-body);
}

.body .edition__language:hover {
  background: rgba(255, 255, 255, 0.24) url('../img/seta.svg') 90% 50% no-repeat;
}

.body .edition__language option {
  background-color: #2d415b; /* workaround for the color/opacity that should be, but didn't apply to the option tag: rgba(255, 255, 255, 0.16)  */
}

.body .edition__inputBackgroundColor {
  box-sizing: border-box;

  height: 56px;

  margin: 1rem 0 0 0;
  border: 1px solid #FFFFFF;
  border-radius: 8px;

  padding: 5px;
  background: rgba(196, 196, 196, 0.01);
}

.body .edition__btnSaveProject {
  margin: 2rem 0 0 0;

  box-sizing: border-box;
  height: 56px;

  background: #5081FB;
  border-radius: 8px;

  font: var(--font-body);
  color: #051D3B;
}

.body .edition__btnSaveProject:hover {
  background: #7BA4FC;
}

.body .edition__btnSaveProject:active {
  background: #7BA4FC;
  border: 4px solid rgba(80, 129, 251, 0.72);
}

.body .edition__btnSaveProject:focus {
  background: #96B9FD;
}
/* ... */

